--- a/GaussElimination/GaussElimination.vcxproj.filters
+++ b/GaussElimination/GaussElimination.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="input_data.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="n.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
